--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
   <div class="container">
+    <div class="cells">1</div>
+    <div class="cells">2</div>
+    <div class="cells">3</div>
+    <div class="cells">4</div>
+    <div class="cells">5</div>
+    <div class="cells">6</div>
+    <div class="cells">7</div>
+    <div class="cells">8</div>
+    <div class="cells">9</div>
 
   </div>
 </body>
