--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <div class="cells">1</div>
-    <div class="cells">2</div>
-    <div class="cells">3</div>
-    <div class="cells">4</div>
-    <div class="cells">5</div>
-    <div class="cells">6</div>
-    <div class="cells">7</div>
-    <div class="cells">8</div>
-    <div class="cells">9</div>
-
+  <div id="container">
   </div>
+  <script src="scripts.js"></script>
 </body>
 </html>
