--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="container">
+  <div class="content">
+    <div class="box">
+      <div id="container">
+      </div>
+    </div>
   </div>
 </body>
 </html>
