--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 <body>
   <div class="content">
     <div class="box">
+      <div class="title">Etch-a-sketch</div>
       <div id="container">
+      </div>
+      <div class="bottom">
+        <button onclick="changeSize()" class="button">Change sketch size</button>
       </div>
     </div>
   </div>
+  <div class="footer">Odin Project Etch a sketch</div>
 </body>
 </html>
